--- a/jenkins-brain.planx-pla.net/manifest.json
+++ b/jenkins-brain.planx-pla.net/manifest.json
@@ -282,7 +282,8 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "dispatcher_job_num": "5",
     "netpolicy": "on",
-    "tier_access_level" : "libre"
+    "tier_access_level" : "libre",
+    "es7": true
   },
   "ssjdispatcher": {
     "job_images": {
