--- a/jenkins-niaid.planx-pla.net/manifest.json
+++ b/jenkins-niaid.planx-pla.net/manifest.json
@@ -288,7 +288,8 @@
     "tier_access_level": "libre",
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "dispatcher_job_num": "5",
-    "netpolicy": "on"
+    "netpolicy": "on",
+    "es7": true
   },
   "ssjdispatcher": {
     "job_images": {
