--- a/qa-jcoin.planx-pla.net/manifest.json
+++ b/qa-jcoin.planx-pla.net/manifest.json
@@ -59,7 +59,7 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa-jcoin/user.yaml",
     "sync_from_dbgap": "False",
     "dispatcher_job_num": "10",
-    "netpolicy": "on",
+    "netpolicy": "off",
     "maintenance_mode": "off",
     "lb_type": "internal",
     "es7": true
