-Add most_recent_update_datetime to etl mapping for NIAID

--- a/qa-niaid.planx-pla.net/etlMapping.yaml
+++ b/qa-niaid.planx-pla.net/etlMapping.yaml
@@ -33,6 +33,7 @@ mappings:
       - name: required_idp
       - name: external_url
       - name: created_datetime
+      - name: most_recent_update_datetime
         
   - name: qa-niaid_ct-file
     doc_type: ctfile
