--- a/jenkins-perf.planx-pla.net/manifest.json
+++ b/jenkins-perf.planx-pla.net/manifest.json
@@ -7,26 +7,26 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "quay.io/cdis/arborist:master",
+    "arborist": "quay.io/cdis/arborist:integration202403",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
-    "fence": "quay.io/cdis/fence:master",
+    "fence": "quay.io/cdis/fence:integration202403",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "indexd": "quay.io/cdis/indexd:master",
-    "ws-storage": "quay.io/cdis/ws-storage:master",
-    "peregrine": "quay.io/cdis/peregrine:master",
-    "pidgin": "quay.io/cdis/pidgin:master",
-    "portal": "quay.io/cdis/data-portal:master",
+    "indexd": "quay.io/cdis/indexd:integration202403",
+    "ws-storage": "quay.io/cdis/ws-storage:integration202403",
+    "peregrine": "quay.io/cdis/peregrine:integration202403",
+    "pidgin": "quay.io/cdis/pidgin:integration202403",
+    "portal": "quay.io/cdis/data-portal:integration202403",
     "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
-    "sheepdog": "quay.io/cdis/sheepdog:master",
-    "spark": "quay.io/cdis/gen3-spark:master",
-    "tube": "quay.io/cdis/tube:master",
-    "manifestservice": "quay.io/cdis/manifestservice:master",
-    "wts": "quay.io/cdis/workspace-token-service:master",
-    "guppy": "quay.io/cdis/guppy:master",
-    "sower": "quay.io/cdis/sower:master",
-    "hatchery": "quay.io/cdis/hatchery:master",
-    "metadata": "quay.io/cdis/metadata-service:master",
-    "dashboard": "quay.io/cdis/gen3-statics:master"
+    "sheepdog": "quay.io/cdis/sheepdog:integration202403",
+    "spark": "quay.io/cdis/gen3-spark:integration202403",
+    "tube": "quay.io/cdis/tube:integration202403",
+    "manifestservice": "quay.io/cdis/manifestservice:integration202403",
+    "wts": "quay.io/cdis/workspace-token-service:integration202403",
+    "guppy": "quay.io/cdis/guppy:integration202403",
+    "sower": "quay.io/cdis/sower:integration202403",
+    "hatchery": "quay.io/cdis/hatchery:integration202403",
+    "metadata": "quay.io/cdis/metadata-service:integration202403",
+    "dashboard": "quay.io/cdis/gen3-statics:integration202403"
   },
   "arborist": {
     "deployment_version": "2"
@@ -49,7 +49,7 @@
     "name": "pelican-export",
     "container": {
       "name": "job-task",
-      "image": "quay.io/cdis/pelican:master",
+      "image": "quay.io/cdis/pelican:integration202403",
       "pull_policy": "always",
       "env": []
     },
