--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,7 +11,7 @@ qa-dcp.planx-pla.net @uc-cdis/planx-qa
 qa-covid19.planx-pla.net @atharvar28 @beamcb
 qa-ibd.planx-pla.net @atharvar28 @beamcb
 qa-jcoin.planx-pla.net @atharvar28 @beamcb
-qa-kidsfirst.planx-pla.net @radhrreddy @atharvar28
+qa-kidsfirst.planx-pla.net @CTDS-Fortel @atharvar28
 qa-niaid.planx-pla.net @beamcb @atharvar28
 
 qa-heal.planx-pla.net @briennal @haraprasadj
