--- a/qa-mickey.planx-pla.net/manifest.json
+++ b/qa-mickey.planx-pla.net/manifest.json
@@ -71,5 +71,8 @@
     ],
     "config_index": "etl_mickey_array-config",
     "auth_filter_field": "auth_resource_path"
+  },
+  "argo": {
+    "argo_server_service_url": "http://argo-argo-workflows-server.argo.svc.cluster.local:2746"
   }
 }
