--- a/jenkins-blood.planx-pla.net/manifest.json
+++ b/jenkins-blood.planx-pla.net/manifest.json
@@ -358,5 +358,8 @@
     "guppy": {
       "strategy": "auto"
     }
+  },
+  "argo": {
+    "argo_server_service_url": "http://argo-argo-workflows-server.argo.svc.cluster.local:2746"
   }
 }
