--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -93,7 +93,7 @@
     "adapter_commons": {
         "SAMHDA": {
             "mds_url": "https://qa-heal.planx-pla.net/",
-            "commons_url": "https://qa-heal.planx-pla.net/",
+            "commons_url": "a-heal.planx-pla.net",
             "adapter": "gen3",
             "keep_original_fields": true,
             "config": {
@@ -102,12 +102,12 @@
             "field_mappings": {
                 "manifest": "path:__manifest",
                 "_hdp_uid": "path:project_number",
-                "commons_url": "https://qa-heal.planx-pla.net/"
+                "commons_url": "qa-heal.planx-pla.net"
             }
         },
         "HEAL": {
             "mds_url": "https://qa-heal.planx-pla.net/",
-            "commons_url": "https://qa-heal.planx-pla.net/",
+            "commons_url": "qa-heal.planx-pla.net",
             "adapter": "gen3",
             "commons_name": "HEAL",
             "config": {
@@ -128,7 +128,7 @@
                 "advSearchFilters": {
                     "path": "advSearchFilters"
                 },
-                "commons_url": "https://qa-heal.planx-pla.net/"
+                "commons_url": "qa-heal.planx-pla.net"
             },
             "per_item_values": {
                 "HDP00258": {
@@ -194,7 +194,7 @@
         },
         "ICPSR": {
             "mds_url": "https://www.icpsr.umich.edu/icpsrweb/neutral/oai/studies",
-            "commons_url": "https://www.icpsr.umich.edu",
+            "commons_url": "externaldata.healdata.org",
             "adapter": "icpsr",
             "keep_original_fields": false,
             "filters": {
@@ -361,7 +361,7 @@
         },
         "ClinicalTrials.gov": {
             "mds_url": "https://clinicaltrials.gov/api/query/full_studies",
-            "commons_url": "http://clinicaltrials.gov",
+            "commons_url": "externaldata.healdata.org",
             "adapter": "clinicaltrials",
             "filters": {
                 "term": "OUD",
@@ -533,7 +533,7 @@
         },
         "PDAPS": {
             "mds_url": "https://api.monqcle.com/",
-            "commons_url": "https://pdaps.org",
+            "commons_url": "externaldata.healdata.org",
             "adapter": "pdaps",
             "filters": {
                 "datasets": [
