--- a/jenkins-perf.planx-pla.net/manifest.json
+++ b/jenkins-perf.planx-pla.net/manifest.json
@@ -7,24 +7,24 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "quay.io/cdis/arborist:integration202404",
+    "arborist": "quay.io/cdis/arborist:2024.04",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
-    "fence": "quay.io/cdis/fence:integration202404",
+    "fence": "quay.io/cdis/fence:2024.04",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "indexd": "quay.io/cdis/indexd:integration202404",
-    "peregrine": "quay.io/cdis/peregrine:integration202404",
-    "portal": "quay.io/cdis/data-portal:integration202404",
-    "revproxy": "quay.io/cdis/nginx:integration202404",
-    "sheepdog": "quay.io/cdis/sheepdog:integration202404",
-    "spark": "quay.io/cdis/gen3-spark:integration202404",
-    "tube": "quay.io/cdis/tube:integration202404",
-    "manifestservice": "quay.io/cdis/manifestservice:integration202404",
-    "wts": "quay.io/cdis/workspace-token-service:integration202404",
-    "guppy": "quay.io/cdis/guppy:integration202404",
-    "sower": "quay.io/cdis/sower:integration202404",
-    "hatchery": "quay.io/cdis/hatchery:integration202404",
-    "metadata": "quay.io/cdis/metadata-service:integration202404",
-    "dashboard": "quay.io/cdis/gen3-statics:integration202404"
+    "indexd": "quay.io/cdis/indexd:2024.04",
+    "peregrine": "quay.io/cdis/peregrine:2024.04",
+    "portal": "quay.io/cdis/data-portal:2024.04",
+    "revproxy": "quay.io/cdis/nginx:2024.04",
+    "sheepdog": "quay.io/cdis/sheepdog:2024.04",
+    "spark": "quay.io/cdis/gen3-spark:2024.04",
+    "tube": "quay.io/cdis/tube:2024.04",
+    "manifestservice": "quay.io/cdis/manifestservice:2024.04",
+    "wts": "quay.io/cdis/workspace-token-service:2024.04",
+    "guppy": "quay.io/cdis/guppy:2024.04",
+    "sower": "quay.io/cdis/sower:2024.04",
+    "hatchery": "quay.io/cdis/hatchery:2024.04",
+    "metadata": "quay.io/cdis/metadata-service:2024.04",
+    "dashboard": "quay.io/cdis/gen3-statics:2024.04"
   },
   "arborist": {
     "deployment_version": "2"
@@ -48,7 +48,7 @@
       "name": "pelican-export",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/pelican:integration202404",
+        "image": "quay.io/cdis/pelican:2024.04",
         "pull_policy": "always",
         "env": []
       },
