--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -12,7 +12,7 @@ qa-covid19.planx-pla.net @atharvar28 @beamcb
 qa-ibd.planx-pla.net @atharvar28 @beamcb
 qa-jcoin.planx-pla.net @atharvar28 @beamcb
 qa-kidsfirst.planx-pla.net @CTDS-Fortel @atharvar28
-qa-niaid.planx-pla.net @beamcb @atharvar28
+qa-niaid.planx-pla.net @frankliuao @atharvar28
 
 qa-heal.planx-pla.net @briennal @haraprasadj
 qa-brh.planx-pla.net @briennal @haraprasadj
