--- a/qa-heal.planx-pla.net/manifest.json
+++ b/qa-heal.planx-pla.net/manifest.json
@@ -38,8 +38,8 @@
   },
   "metadata": {
     "USE_AGG_MDS": true,
-    "AGG_MDS_NAMESPACE": "qa-heal",
-    "AGG_MDS_DEFAULT_DATA_DICT_FIELD": "variable_level_metadata"
+    "AGG_MDS_DEFAULT_DATA_DICT_FIELD": "variable_level_metadata",
+    "AGG_MDS_NAMESPACE": "qa-heal"
   },
   "ssjdispatcher": {
     "job_images": {
