--- a/qa-heal.planx-pla.net/manifest.json
+++ b/qa-heal.planx-pla.net/manifest.json
@@ -38,6 +38,7 @@
   },
   "metadata": {
     "USE_AGG_MDS": true,
+    "AGG_MDS_DEFAULT_DATA_DICT_FIELD": "variable_level_metadata",
     "AGG_MDS_NAMESPACE": "qa-heal"
   },
   "ssjdispatcher": {
