--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -99,7 +99,7 @@
             "config": {
                 "guid_type": "discovery_metadata",
                 "study_field": "gen3_discovery",
-                "data_dict_field": "data_dictionaries"
+                "data_dict_field": "variable_level_metadata"
             },
             "keep_original_fields": true,
             "field_mappings": {
