Testing : new alias creation jenkins_subject_alias_new
`jenkins_subject_alias_new` for testing the exploration page with '_subject_id' instead of 'subject_id'

--- a/jenkins-dcp.planx-pla.net/manifest.json
+++ b/jenkins-dcp.planx-pla.net/manifest.json
@@ -291,7 +291,7 @@
   "guppy": {
     "indices": [
       {
-        "index": "jenkins_subject_alias",
+        "index": "jenkins_subject_alias_new",
         "type": "subject"
       },
       {
